Done: 0.5.5.3. Make Indirect Drawing where each object has it's own Command Buffer -> Sub-Buffers.
Not possible:
0.5.5.5. Make Recursive Indirect Draw:

In Progress:
0.5.5. If possible optimise further Vulkan Implementation after render data reusability: